--- a/app/assets/stylesheets/hl7_messaging.scss
+++ b/app/assets/stylesheets/hl7_messaging.scss
@@ -15,3 +15,24 @@ div.section_label {
   font-size: 18px;
   padding-left: 5px
 }
+
+textarea#textarea_discovery_hl7 {
+  width: 100%;
+  direction: ltr;
+  display: block;
+  max-width: 100%;
+  line-height: 1.5;
+  padding: 15px 15px 30px;
+  border-radius: 3px;
+  border: 1px solid #F7E98D;
+  font: 13px Tahoma, cursive;
+  transition: box-shadow 0.5s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  font-smoothing: subpixel-antialiased;
+  background: -o-linear-gradient(#F9EFAF, #F7E98D);
+  background: -ms-linear-gradient(#F9EFAF, #F7E98D);
+  background: -moz-linear-gradient(#F9EFAF, #F7E98D);
+  background: -webkit-linear-gradient(#F9EFAF, #F7E98D);
+  background: linear-gradient(#F9EFAF, #F7E98D);
+  height: 100%;
+}
