--- a/app/views/hl7_messaging/_discovery_results_table.html.erb
+++ b/app/views/hl7_messaging/_discovery_results_table.html.erb
@@ -1,12 +1,14 @@
 <% if @results %>
     <% @results.each do |row|
+      request_id = row.id
       domain = row.domain.sub(/\s+/,'')
+      table_id = "discovery_#{request_id}_#{domain}"
     %>
         <div class="result_hdr" style="border-left: 3px solid green; padding-left: 5px">
           <%= render partial: 'checksum_discovery_result_table_hdr', locals: {row: row}%><!-- use this on checksum! -->
 
           <div class="result_table">
-            <table class="prisme-table table-hover discovery_table" id="<%= "discovery_#{row.id}_#{domain}" %>" data-domain="<%= domain %>">
+            <table class="prisme-table table-hover discovery_table" id="<%= table_id %>" data-domain="<%= domain %>" data-request_id="<%= request_id %>">
               <thead>
               <tr>
                 <th scope="col" width="20%">Site</th>
@@ -16,7 +18,7 @@
               </tr>
               </thead>
               <tbody>
-              <%= render partial: 'discovery_results_tbody', locals: {discovery_details: row.discovery_details, request_ar: row} %>
+              <%= render partial: 'discovery_results_tbody', locals: {table_id: table_id, discovery_details: row.discovery_details} %>
               </tbody>
             </table>
           </div>
