--- a/app/views/hl7_messaging/_discovery_results_tbody.html.erb
+++ b/app/views/hl7_messaging/_discovery_results_tbody.html.erb
@@ -12,7 +12,7 @@
       subset = row.subset
       striped = (striped.eql?('transparent') ? '#f2f2f2;' : 'transparent')
     end
-    tr_id = "#{row.va_site_id}_#{row.id}_#{domain}_#{row.subset.gsub(/\s+/,'')}_discovery"
+    tr_id = "#{row.va_site_id}_#{row.id}_#{domain}_#{subset.gsub(/\s+/,'')}_discovery"
 %>
     <tr id="<%= tr_id %>" style="background-color: <%= striped %>">
       <td class="site_name"><%= "#{row.va_site_id} - #{row.va_site.name}" %></td>
@@ -22,7 +22,6 @@
         Status:<br>
         Request Time:<br>
         Response Time:<br>
-        <!--Has Data:<br>-->
         Actions:<br>
       </td>
       <td>
@@ -33,48 +32,7 @@
       </td>
     </tr>
 <% end %>
-<script type="text/javascript" charset="utf-8">
-    function discoveryCsv(btn) {
-        var detail_id = $(btn).closest('.btn-group').data('btngroup_detail_id');
-        $(btn).attr('disabled', true);
-
-        $.get(gon.routes.discovery_csv_path, {format: 'txt', discovery_detail_id: detail_id}, function(data) {
-            var blob = new Blob([data], {type: "text/plain;charset=utf-8"});
-            saveAs(blob,'discovery_'+detail_id+'.csv');
-            $(btn).attr('disabled', false);
-        });
-    }
-
-    (function() {
-        var req_tbl = $('#discovery_' + '<%= "#{request_ar.id}_#{domain.sub(/\s+/,'')}"%>');
-        req_tbl.data('done', <%= ! (done.uniq.include? false) %>);
-    })();
-</script>
-
-
 <!-- modal popup for viewing checksum hl7 -->
-<style>
-  textarea#textarea_discovery_hl7 {
-    width:100%;
-    direction:rtl;
-    display:block;
-    max-width:100%;
-    line-height:1.5;
-    padding:15px 15px 30px;
-    border-radius:3px;
-    border:1px solid #F7E98D;
-    font:13px Tahoma, cursive;
-    transition:box-shadow 0.5s ease;
-    box-shadow:0 4px 6px rgba(0,0,0,0.1);
-    font-smoothing:subpixel-antialiased;
-    background:-o-linear-gradient(#F9EFAF, #F7E98D);
-    background:-ms-linear-gradient(#F9EFAF, #F7E98D);
-    background:-moz-linear-gradient(#F9EFAF, #F7E98D);
-    background:-webkit-linear-gradient(#F9EFAF, #F7E98D);
-    background:linear-gradient(#F9EFAF, #F7E98D);
-    height:100%;
-  }
-</style>
 <div id="view_discovery_hl7_modal" class="modal fade modal-wide50" role="dialog">
   <div class="modal-dialog modal-lg">
     <!-- Modal content-->
@@ -91,3 +49,10 @@
     </div>
   </div>
 </div>
+<script type="text/javascript" charset="utf-8">
+    (function() {
+        var req_tbl = $('#<%= table_id %>');
+        req_tbl.data('done', <%= ! (done.uniq.include? false) %>);
+    })();
+</script>
+
