--- a/app/views/hl7_messaging/_checksum_display.html.erb
+++ b/app/views/hl7_messaging/_checksum_display.html.erb
@@ -1,4 +1,4 @@
-<% if detail %>
+<% if detail&.id %>
     <div style="float: right"><%= detail.checksum_request.username %></div><br>
     <div style="float: right; color: <%= detail.status.eql?('FAILED') ? 'red' : 'green' %>" title="<%= detail.failure_message %>">
       <% if detail.status.eql?('FAILED') %>
@@ -13,5 +13,5 @@
     <div style="float: right"><%= display_time(detail.finish_time) %></div><br>
     <div style="float: right"><%= detail.checksum %></div><br>
 <% else %>
-    <span style="color:red">Previous Checksum is not available</span>
+    <span style="color:red">Checksum Data is not available</span>
 <% end %>
