--- a/app/views/hl7_messaging/_discovery_results_table.html.erb
+++ b/app/views/hl7_messaging/_discovery_results_table.html.erb
@@ -5,7 +5,7 @@
       table_id = "discovery_#{request_id}_#{domain}"
     %>
         <div class="result_hdr" style="border-left: 3px solid green; padding-left: 5px">
-          <%= render partial: 'checksum_discovery_result_table_hdr', locals: {row: row}%><!-- use this on checksum! -->
+          <%= render partial: 'checksum_discovery_result_table_hdr', locals: {row: row}%>
 
           <div class="result_table">
             <table class="prisme-table table-hover discovery_table" id="<%= table_id %>" data-domain="<%= domain %>" data-request_id="<%= request_id %>">
