--- a/config/props/prisme.properties.erb
+++ b/config/props/prisme.properties.erb
@@ -22,7 +22,10 @@ warmup_apache = 500
 #Where various config files may live. Don't end in slash
 #the database file may live here too, but that location is configured in database.yml
 #database.yml is processed before our initializers run so it must be this way...
-data_directory = /app/prismeData
+data_directory = <%= RbConfig::CONFIG['host_os'].eql?('mswin32') ? %q{./tmp} : %q{/app/prismeData} %>
+
+#prisme will write the db config it is using to the data_directory
+vuid_db_file = database_vuid.yml
 
 #flag determining if we should show the log events tab page
 show_log_events=true
