--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -51,6 +51,9 @@
             <li role="menuitem">
               <a href="<%= terminology_db_builder_path %>" onclick="polling.checkPolling(polling.pollEnum.DB_BUILDER);" title="Database Builder">
                 Database Builder</a></li>
+            <li role="menuitem">
+              <a href="<%= vuid_requests_path %>" onclick="polling.checkPolling(polling.pollEnum.VUID_REQUESTS);" title="VUID Server">
+                VUID Server</a></li>
           </ul>
         </div>
 
