Adding support for self signed certs for the test env.

--- a/config/props/prisme.properties.erb
+++ b/config/props/prisme.properties.erb
@@ -44,3 +44,6 @@ site_restriction_ignored=PRE_PROD,PROD
 
 #list the environments where a devise signup is NOT allowed
 disallow_local_signups_on=PRE_PROD,PROD
+
+#Allow self signed certificates? Set to false and they will work.
+ssl_verification = true
