--- a/app/assets/stylesheets/hl7_messaging.scss
+++ b/app/assets/stylesheets/hl7_messaging.scss
@@ -36,3 +36,33 @@ textarea#textarea_discovery_hl7 {
   background: linear-gradient(#F9EFAF, #F7E98D);
   height: 100%;
 }
+
+.tooltipz{
+  display: inline;
+  position: relative;
+}
+
+.tooltipz:hover:after{
+  background: #333;
+  background: rgba(0,0,0,.8);
+  border-radius: 5px;
+  bottom: 26px;
+  color: #fff;
+  content: attr(title);
+  left: 20%;
+  padding: 5px 15px;
+  position: absolute;
+  z-index: 998;
+  width: 800px;
+}
+
+.tooltipz:hover:before{
+  border: solid;
+  border-color: #ff626c transparent;
+  border-width: 6px 6px 0 6px;
+  bottom: 20px;
+  content: "";
+  left: 50%;
+  position: absolute;
+  z-index: 999;
+}
