--- a/app/views/hl7_messaging/_discovery_results_table.html.erb
+++ b/app/views/hl7_messaging/_discovery_results_table.html.erb
@@ -66,7 +66,8 @@
             pagination: true,
             paginationAutoPageSize: true,
             enableColResize: true,
-            onCellClicked:  cellClicked
+            onCellClicked:  cellClicked,
+            suppressMovableColumns: true
         };
 
         $.get(gon.routes.discovery_diffs_path, {discovery_detail_id: 'detail_id'}, function(data) {
