--- a/app/views/hl7_messaging/index.html.erb
+++ b/app/views/hl7_messaging/index.html.erb
@@ -62,7 +62,7 @@
     $(document).ready(function () {
         $("#tabs").tabs();
         $("#discovery_diff_tabs").tabs();
-        VistaGrid.initialize('ag-grid_vista_only');
+     //   var vistaOnly = VistaGrid.new('ag-grid_vista_only');
 //        VistaGrid.initialize('ag-grid_isaac_only');
 
         // wire the back button to swap the panels
